Cambios en pacientes

--- a/gateway/src/main/webapp/i18n/es/sexo.json
+++ b/gateway/src/main/webapp/i18n/es/sexo.json
@@ -2,8 +2,8 @@
   "gatewayApp": {
     "Sexo": {
       "null": "",
-      "H": "Hombre",
-      "M": "Mujer"
+      "M": "Hombre",
+      "F": "Mujer"
     }
   }
 }
